# AE740_FINAL_PROJECT

./: .gitignore  README.md  outdoor_world.bt  output_filename.bt
aruco_ros/aruco_ros/launch/: single.launch
aruco_ros/aruco_ros/src/: simple_single.cpp
dependencies/ackermann-drive-teleop/scripts/: keyop.py
dependencies/aruco_ros/aruco_ros/launch/: marker_publisher.launch  single.launch
dependencies/aruco_ros/aruco_ros/src/: simple_single.cpp
dependencies/octomap/: CMakeLists.txt
dependencies/octomap/dynamicEDT3D/lib/: libdynamicedt3d.so.1.9.6
dependencies/octomap/lib/: libdynamicedt3d.so.1.9  libdynamicedt3d.so.1.9.6  liboctomap.so.1.9  liboctomap.so.1.9.6  liboctomath.so.1.9.6  liboctovis.so.1.9  liboctovis.so.1.9.6
dependencies/octomap/octomap/lib/: liboctomap.so.1.9.6  (+2 more)
interface/: CMakeLists.txt  package.xml
interface/config/: houseCoords.yaml
interface/include/: master_node.h  utils.h
interface/launch/: bizNode.launch  landing_test.launch  octomapgen.launch
interface/nodes/: business_node.cpp  master_node.cpp
interface/rviz/: main.rviz
interface/src/: utils.cpp
marker/models/marker000/: model.sdf
marker/models/marker001/: model.sdf
marker/models/marker002/: model.sdf
marker/worlds/: marker.world
path_planning/: CMakeLists.txt  output_filename_complete.bt  package.xml
path_planning/assets/: outdoor_full.bt  output_filename_med.bt  road_1.bt  road_2.bt
path_planning/config/: params.yaml
path_planning/launch/: octomapgen.sh  path_planning_launch.launch
path_planning/src/: generate_octomap.cpp  path_planning.cpp  publish_octomap.cpp
rotors_simulator/rotors_control/: CMakeLists.txt  package.xml
rotors_simulator/rotors_description/urdf/: firefly_base.xacro  multirotor_base.xacro
rotors_simulator/rotors_gazebo/src/: hovering_example.cpp
rotors_simulator/rotors_gazebo/worlds/: outdoor.world  outdoor_collision.world
rotors_simulator/rotors_gazebo_plugins/: CMakeLists.txt
rotors_simulator/rotors_gazebo_plugins/src/: gazebo_octomap_plugin.cpp
trajectory_generation_pkg/: CMakeLists.txt  package.xml
trajectory_generation_pkg/rviz/: test_traj_gen.rviz
trajectory_generation_pkg/src/: test_trajectory_generator.cpp  trajectory_generation_node.cpp
vehicle_description/: CMakeLists.txt  README.md  package.xml
vehicle_description/ambulance/: model.sdf
vehicle_description/ambulance/meshes/: ambulance.mtl
vehicle_description/launch/: rviz.launch  spawn_ambulance.launch  spawn_cart.launch  spawn_cart_holonomic.launch  spawn_cart_unicycle.launch  spawn_castor.launch
vehicle_description/src/: drive_van.cpp  move_cart.cpp  move_cart_holonomic.cpp  move_van_holonomic.cpp
vehicle_description/urdf/: cart.gazebo  cart.xacro  cart_ambulance_holonomic.gazebo  cart_ambulance_holonomic.xacro  cart_holonomic.gazebo  cart_holonomic.xacro  cart_macros.xacro  cart_unicycle.xacro  castor.gazebo  castor.xacro
vehicle_description/urdf/cart_holonomic_files/: cart_holonomic.gazebo  cart_holonomic_macros.xacro  cart_holonomic_materials.xacro
vehicle_description/urdf/cart_unicycle_files/: cart_unicycle.gazebo
vehicle_description/urdf/castor_files/: castor_macros.xacro
(+18 files in other folders)
